--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:dev": "ng serve --configuration=development"
   },
   "private": true,
   "dependencies": {
